fix collapse glitch bug

--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,8 @@ html {
   color: currentColor; }
 
 .collapse__item-description {
-  font-size: 1.6rem;
+  font-size: 1.7rem;
+  line-height: 1.4;
   font-weight: 400;
   background-color: white;
   color: rgba(0, 0, 0, 0.7);
@@ -274,6 +275,12 @@ html {
     padding: 2rem 3rem 0rem 3rem; }
     .collapse__item-description p:last-child {
       margin-bottom: 2rem; }
+  .collapse__item-description ul {
+    padding: 3rem 3rem; }
+    .collapse__item-description ul li {
+      margin-left: 2rem; }
+      .collapse__item-description ul li:not(:last-child) {
+        margin-bottom: 1rem; }
 
 .timeline {
   position: relative; }
