--- a/sass/components/_collapse.scss
+++ b/sass/components/_collapse.scss
@@ -36,7 +36,8 @@
     }
 
     &__item-description {
-        font-size: 1.6rem;
+        font-size: 1.7rem;
+        line-height: 1.4;
         font-weight: 400;
         background-color: white;
         color: $color-text-dark;
@@ -53,7 +54,18 @@
             &:last-child {
                 margin-bottom: 2rem;
             }
+        }
 
+        ul {
+            padding: 3rem 3rem;
+
+            li {
+                margin-left: 2rem;
+
+                &:not(:last-child) {
+                    margin-bottom: 1rem;
+                }
+            }
         }
 
     }
